# fasthooks

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: hook_execution.rs
docs/: architecture.md  configuration.md  getting-started.md  migration.md  troubleshooting.md
src/: cli.rs  main.rs
src/commands/: add.rs  benchmark.rs  init.rs  install.rs  list.rs  migrate.rs  mod.rs  run.rs  uninstall.rs  validate.rs
src/config/: mod.rs  parser.rs  schema.rs
src/hooks/: git.rs  installer.rs  mod.rs  template.rs
src/runner/: executor.rs  mod.rs  stats.rs
src/utils/: env.rs  fs.rs  mod.rs
tests/integration/: cli.rs  config.rs  hooks.rs  mod.rs
